src/objects/Branch__c.object
<CustomObject>
    <description>Objeto de Oficina</description>
    <fields>
        <fullName>active_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inactivo</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>address_desc__c</fullName>
        <description>Dirección</description>
        <formula>IF(ISBLANK( street_desc__c ),&apos;&apos;,street_desc__c) + 
IF(AND(NOT(ISBLANK(street_desc__c)),NOT(ISBLANK( city_name__c  ))),&apos;, &apos;,&apos;&apos;) + 
IF(ISBLANK( city_name__c  ),&apos;&apos;,city_name__c  ) + 
IF(AND(OR(NOT(ISBLANK(street_desc__c)),NOT(ISBLANK(city_name__c ))),OR(NOT(ISBLANK( state_name__c )),NOT(ISBLANK( zipcode_id__c )))),&apos;, &apos;,&apos;&apos;)+ 
IF(NOT(ISBLANK(state_name__c )),IF(NOT(ISBLANK(zipcode_id__c )),state_name__c + &apos; &apos; +zipcode_id__c ,state_name__c),IF(NOT(ISBLANK(zipcode_id__c )),zipcode_id__c , &apos;&apos;))+
IF(OR(NOT(ISBLANK(street_desc__c )),NOT(ISBLANK(city_name__c  )),NOT(ISBLANK(state_name__c )),NOT(ISBLANK(zipcode_id__c ))),IF(NOT(ISBLANK( country_name__c )),&apos;, &apos; + country_name__c ,&apos;&apos;),IF(NOT(ISBLANK( country_name__c )),country_name__c ,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_category_type__c</fullName>
        <description>Categoría</description>
        <label>Branch Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_id__c</fullName>
        <description>Código</description>
        <label>Branch Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_level1_desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country</description>
        <label>Branch  Hierarchy Level 1</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Branches (Branch  Hierarchy Level 1)</relationshipLabel>
        <relationshipName>Branches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>branch_level1_id__c</fullName>
        <description>Código de País</description>
        <formula>branch_level1_desc__r.branch_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch  Hiearchy Level 1 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_level2_desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Área</description>
        <label>Branch  Hierarchy Level 2</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Branches (Branch  Hierarchy Level 2)</relationshipLabel>
        <relationshipName>Branches2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>branch_level2_id__c</fullName>
        <description>Código de Área</description>
        <formula>branch_level2_desc__r.branch_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch  Hiearchy Level 2 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_level3_desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Banca</description>
        <label>Branch Hierarchy Level 3</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Branches (Branch Hierarchy Level 3)</relationshipLabel>
        <relationshipName>Branch3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>branch_level3_id__c</fullName>
        <description>Código de Banca</description>
        <formula>branch_level3_desc__r.branch_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch  Hiearchy Level 3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city_name__c</fullName>
        <description>Localidad/Ciudad</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country_name__c</fullName>
        <description>País</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_phone_number__c</fullName>
        <description>Telefono 2</description>
        <label>OtherPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone_number__c</fullName>
        <description>Telefono 1</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>state_name__c</fullName>
        <description>Provincia</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street_desc__c</fullName>
        <description>Calle</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <description>Identificador Único</description>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zipcode_id__c</fullName>
        <description>Código Postal</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>branch_id__c</columns>
        <columns>branch_category_type__c</columns>
        <columns>active_type__c</columns>
        <columns>branch_level4_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>